Fri Jul 11 15:09:55 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Version 0.7.2.

Fri Jul 11 12:08:57 BST 2003  Olly Betts <olly@survex.com>

	* omega.cc: If the same database is listed more than once, only search
	  the first occurrence.
 
Fri Jul 11 11:57:24 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,utils.cc: Use snprintf.

Tue Jul 08 17:56:39 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Version 0.7.1.

Tue Jul 08 17:34:01 BST 2003  Olly Betts <olly@survex.com>

	* omindex.cc: Fixed compilation problem.

Fri Jul 04 22:12:32 BST 2003  Olly Betts <olly@survex.com>

	* bootstrap: add missing ';;' as case pattern delimiter

Thu Jul 03 23:34:50 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Version 0.7.0.

Thu Jul 03 23:33:05 BST 2003  Olly Betts <olly@survex.com>

	* omindex.cc: Abort parsing of document if it's excluded from
	  indexing; ignore anything outside of the first <body>...</body>,
	  if present.

Tue Jun 24 00:45:28 BST 2003  Olly Betts <olly@survex.com>

	* docs/overview.txt: Added note about hashing of long URL terms and
	  reworked structure a little.

Mon Jun 23 21:11:41 BST 2003  Olly Betts <olly@survex.com>

	* bootstrap: Check for Bison 1.875 which doesn't work with Xapian.

Mon Jun 23 16:52:47 BST 2003  Olly Betts <olly@survex.com>

	* omega.cc,omindex.cc,scriptindex.cc: Xapian::PostListIterator ->
	  Xapian::PostingIterator.

Thu Jun 19 20:02:00 BST 2003  Olly Betts <olly@survex.com>

	* symboltab.h: Convert hardspace to space.

Wed Jun 18 16:32:34 BST 2003  Olly Betts <olly@survex.com>

	* scriptindex.cc: Removed already disabled unique id hashing to docid
	  code.  Xapian doesn't support setting arbitrary docids - if it ever
	  does we can retrieve this code from CVS.

Wed Jun 18 16:28:33 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am,indextext.cc,indextext.h,omindex.cc,scriptindex.cc:
	  Normalise accents in probabilistic terms.

Tue Jun 17 17:54:32 BST 2003  Olly Betts <olly@survex.com>
